--- a/vagrant/catalog/templates/main.html
+++ b/vagrant/catalog/templates/main.html
@@ -15,9 +15,9 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    {% if user_id != None %}
-                        <p><a href="{{url_for('disconnect')}}">Logout</a></p>
-                    {% elif hideLogin == True %}
+                    {% if isLoggedIn %}
+                        <p><a href="{{ url_for('disconnect')}}">Logout</a></p>
+                    {% elif hideLogin %}
             <!--            Intentionally left blank.-->
                     {% else %}
                         <p><a href="{{url_for('showLogin')}}">Login</a></p>
