--- a/vagrant/catalog/templates/showCategories.html
+++ b/vagrant/catalog/templates/showCategories.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-6">
         {% for item in items %}
-            <li>{{item.name}}</li>
+        <li><a href="{{ url_for('showItems', category_name = item.category_name, item_name = item.name) }}">{{item.name}}</a></li>
         {% endfor %}
     </div>
 </div>
