--- a/vagrant/catalog/templates/main.html
+++ b/vagrant/catalog/templates/main.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-md-6">
                     {% if isLoggedIn %}
-                        <p><a href="{{ url_for('disconnect')}}">Logout</a></p>
+                        <p><a href="{{ url_for('logout')}}">Logout</a></p>
                     {% elif hideLogin %}
             <!--            Intentionally left blank.-->
                     {% else %}
