--- a/vagrant/catalog/templates/main.html
+++ b/vagrant/catalog/templates/main.html
@@ -2,30 +2,53 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <style>
+            * {
+                font-size: 1.1em;
+            }
+            h1 {
+                margin: 0px;
+            }
+            a {
+                color: #FF5A2B;
+            }
+            a:hover {
+                color: #FF0000;
+                text-decoration: none;
+            }
+            
+            .row {
+                margin: auto !important;
+            }
+        </style>
 <!--		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">-->
         {% block head %}
         {% endblock %}
     </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <a href="{{url_for('showLatest')}}">
-                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>Show lastest items
+    <body style="background-color: #C6C6C6;">
+        <div style="background-color: #00117E;">
+            <div class="row" style="width: 80%; padding: 10px 0px; margin: auto;">
+                <div class="col-md-6" style="height: 100%;">
+                    <a href="{{url_for('showLatest')}}" style="color: white;">
+                        <h1>Catalog App</h1>
                     </a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" style="height: 100%; text-align: right;">
                     {% if isLoggedIn %}
-                        <p><a href="{{ url_for('logout')}}">Logout</a></p>
+                        <button class="btn btn-primary" onclick="window.location.href = '{{ url_for('logout')}}'">Logout</button>
                     {% elif hideLogin %}
             <!--            Intentionally left blank.-->
                     {% else %}
-                        <p><a href="{{url_for('showLogin')}}">Login</a></p>
+                        <button class="btn btn-primary" onclick="window.location.href = '{{url_for('showLogin')}}'">Login</button>
                     {% endif %}
                 </div>
             </div>
-            {% block content %}
-            {% endblock %}
 		</div>
+        <div style="margin-top: 20px;">
+            <div style="width: 80%; padding: 10px 0px; margin: auto; background-color: white; border: black 1px solid;">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
     </body>
 </html>
