--- a/vagrant/catalog/templates/add.html
+++ b/vagrant/catalog/templates/add.html
@@ -1,16 +1,17 @@
 {% extends "main.html" %}
 {% block content %}
 <form method="POST" action="{{ url_for('addItem') }}">
+    <h2>Add Item</h2>
     <p>
-        Title
+        Title<br>
         <input type="text" name="item_name">
     </p>
     <p>
-        Description
+        Description<br>
         <textarea name="item_description"></textarea>
     </p>
     <p>
-        Category
+        Category<br>
         <select name="item_category">
             {% for cate in categories %}
             <option value="{{cate.name}}">{{cate.name}}</option>
