--- a/vagrant/catalog/templates/delete.html
+++ b/vagrant/catalog/templates/delete.html
@@ -1,8 +1,8 @@
 {% extends "main.html" %}
 {% block content %}
 <form method="POST" action="{{ url_for('deleteItem', category_name = item.category_name, item_name = item.name) }}">
+    <h3>Delete Item</h3>
     <p>
-        Delete Item
         {{ item.category_name }} - {{ item.name }}<br>
         Are you sure you want to delete?
     </p>
