--- a/vagrant/catalog/templates/showItem.html
+++ b/vagrant/catalog/templates/showItem.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
         <article>
             <head>
-                {{item.name}}
+                <h2>{{item.name}}</h2>
             </head>
             <section>
                 Description:&nbsp;{{item.description}}
