Deny the logged in user who tries to edit/delete the items that shouldn't allowed to.

--- a/vagrant/catalog/templates/showLatest.html
+++ b/vagrant/catalog/templates/showLatest.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3" style="border-right: solid 1px black;">
-        <p><strong>Categories</strong></p>
+        <h3>Categories</h3>
         {% for category in categories %}
         <a href="{{ url_for('showCategoryItems', category_name = category.name) }}">{{category.name}}</a><br>
         {% endfor %}
@@ -11,7 +11,7 @@
         {% if isLoggedIn %}
         <a href="{{ url_for('addItem') }}">Add Item</a>
         {% endif %}
-        <p><strong>Latest Items</strong></p>
+        <h3>Latest Items</h3>
         {% for item in items %}
             <a href="{{ url_for('showItems', category_name = item.category_name, item_name = item.name) }}">{{item.name}} </a><i>({{item.category_name}})</i><br>
         {% endfor %}
