--- a/vagrant/catalog/templates/main.html
+++ b/vagrant/catalog/templates/main.html
@@ -4,10 +4,13 @@
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <style>
             * {
-                font-size: 1.1em;
+                font-size: 1.05em;
             }
             h1 {
                 margin: 0px;
+            }
+            h3 {
+                font-weight: bold;
             }
             a {
                 color: #FF5A2B;
@@ -19,6 +22,10 @@
             
             .row {
                 margin: auto !important;
+            }
+            
+            i {
+                color: darkgray;
             }
         </style>
 <!--		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">-->
